--- a/index.html
+++ b/index.html
@@ -14,104 +14,105 @@
 	<div class="bg-green">
 		<div class="wrapper row">
 			<div class="col-1-4">
-				<p></p>
+				<p>Campus Money</p>
 			</div>
 			<div class="col-1-3 push-right">
 				<nav>
 					<ul>
-						<li><a></a></li>
-						<li><a></a></li>
-						<li><a></a></li>
+						<li><a>Solutions</a></li>
+						<li><a>About</a></li>
+						<li><a>Why</a></li>
+						<li><a>Contact</a></li>
 					</ul>
 				</nav>
 			</div>
 		</div>	
 	</div>
 	<div id="bg-image"><!-- this is where the image and the color over lay will sit. --->
-		<h1></h1>
-		<p></p>
+		<h1>We provide solutions to process payments and manage funds.</h1>
+		<p>We have 8 different solutions for managing online bill pay, automatic payments, refunds, and a variety of other payment options.</p>
 	</div>
 </header>	
 <section class="wrapper" id="services">
 	<header>
-		<h2></h2>
+		<h2>Services</h2>
 	</header>
 	<div class="row">
 		<section class="col-1-4">
 			<header>
-				<h3></h3>
+				<h3>eBill &amp; ePay</h3>
 			</header>
-			<p></p>
+			<p>Save money, increase cash flow, and improve service to students by presenting bills electronically and allowing online payments in a PCI Level 1 compliant environment.</p>
 		</section>
 		<section class="col-1-4">
 			<header>
-				<h3></h3>
+				<h3>Actively Mangaged Payment Plans</h3>
 			</header>
-			<p></p>
+			<p>Increase affordability, reduce administrative burdens, and improve access by allowing students to budget tuition and fee payments according to a schedule defined by your institution.</p>
 		</section>
 		<section class="col-1-4">
 			<header>
-				<h3></h3>
+				<h3>Student Choice Refunds</h3>
 			</header>
-			<p></p>
+			<p>Offer an alternative refund method that limits fee exposure to students, promotes choice, and protects your institution from increased scrutiny surrounding refunds disbursement.</p>
 		</section>
 		<section class="col-1-4">
 			<header>
-				<h3></h3>
+				<h3>eStore</h3>
 			</header>
-			<p></p>
+			<p>Sell goods, process event registrations, and solicit donations – all within a single, self-service web store with shopping cart functionality, inventory management, and more.</p>
 		</section>
 	</div>
 	<div class="row">
 		<section class="col-1-4">
 			<header>
-				<h3></h3>
+				<h3>Cashiering</h3>
 			</header>
-			<p></p>
+			<p>Integrate in-person payments into your online payment gateway, streamline the process at the cashier’s window, and automate the manual tasks associated with departmental deposits.</p>
 		</section>
 		<section class="col-1-4">
 			<header>
-				<h3></h3>
+				<h3>Hosted Payments</h3>
 			</header>
-			<p></p>
+			<p>Allow departments across campus to securely accept credit/debit card or ACH payments without capturing or storing card information, keeping your institution secure and compliant.</p>
 		</section>
 		<section class="col-1-4">
 			<header>
-				<h3></h3>
+				<h3>Sponsored Payments</h3>
 			</header>
-			<p></p>
+			<p>Offer an electronic payment gateway to corporations or organizations that wish to sponsor students by paying part or all of their tuition and fees.</p>
 		</section>
 		<section class="col-1-4">
 			<header>
-				<h3></h3>
+				<h3>Refunds</h3>
 			</header>
-			<p></p>
+			<p>Offer an electronic payment gateway to corporations or organizations that wish to sponsor students by paying part or all of their tuition and fees.</p>
 		</section>
 	</div>
 </section>
 <section class="bg-green">
 	<div class="wrapper">
 		<header>
-			<h2></h2>
+			<h2>About Us</h2>
 		</header>
 		<div class="row">
 			<section class="col-1-3">
 				<header>
-					<h3></h3>
+					<h3>We Operate with Integrity</h3>
 				</header>
-				<p></p>
+				<p>We believe in accountability, trust, and open and honest communication. Our associates are empowered to keep the customer #1.</p>
 			</section>
 			<section class="col-1-3">
 				<header>
-					<h3></h3>
+					<h3>We're Experienced</h3>
 				</header>
-				<p></p>
+				<p>After more than 20 years processing payments in higher education and with hundreds of successful integrations under our belt, we know your needs are unique. Let us exceed your expectations.</p>
 			</section>
 			<section class="col-1-3">
 				<header>
-					<h3></h3>
+					<h3>We Innovate</h3>
 				</header>
-				<p></p>
+				<p>Finding new ways to solve problems inspires us. We listen, we challenge traditional thinking, and we never give up. </p>
 			</section>
 		</div>
 	</div>	
@@ -124,89 +125,104 @@
 		<section class="col-1-3">
 			<img src="" alt="">
 			<header>
-				<h3></h3>
+				<h3>Industry Partnerships</h3>
 			</header>
-			<p></p>
+			<p>Over 100 integrations with vendors already on your campus.</p>
 		</section>
 		<section class="col-1-3">
 			<img src="" alt="">
 			<header>
-				<h3></h3>
+				<h3>Secure</h3>
 			</header>
-			<p></p>
+			<p>Business Solutions is PCI Level 1 Validated, and SSAE 16 Audited.</p>
 		</section>
 		<section class="col-1-3">
 			<img src="" alt="">
 			<header>
-				<h3></h3>
+				<h3>Comprehensive</h3>
 			</header>
-			<p></p>
+			<p>Processing every transaction on campus. Covering the life cycle of student payments.</p>
 		</section>
 	</div>
 	<div class="row">
 		<section class="col-1-3">
 			<img src="" alt="">
 			<header>
-				<h3></h3>
+				<h3>Vibrant</h3>
 			</header>
-			<p></p>
+			<p>Part of the Business family of companies. Diversified, stable, forward-thinking.</p>
 		</section>
 		<section class="col-1-3">
 			<img src="" alt="">
 			<header>
-				<h3></h3>
+				<h3>Integrated</h3>
 			</header>
-			<p></p>
+			<p>PeopleSoft Campus Solutions validated, Ellucian Community Partner, Jenzabar approved.</p>
 		</section>
 		<section class="col-1-3">
 			<img src="" alt="">
 			<header>
-				<h3></h3>
+				<h3>Service-Oriented</h3>
 			</header>
-			<p></p>
+			<p>Delivering superior customer experiences is part of the Business Code of Conduct.</p>
 		</section>
 	</div>
 </section>
 <footer id="bg-black">
 	<div class="wrapper">
 		<header>
-			<h2></h2>
+			<h2>Upcoming Conferences</h2>
 		</header>
-		<section class="col-1-3"></section><!-- finish the upcoming events-->
+		<section class="col-1-3 row">
+			<section>
+				<header>
+					<h3>Name of Confernece</h3>
+				</header>
+				<p>Aug. 23rd</p>
+				<p>Description of conference lorem ipsum</p>
+			</section>
+			<section>
+				<header>
+					<h3>Name of Conference</h3>
+				</header>
+				<p>Sept. 7th</p>
+				<p>Description of conference lorem ipsum</p>
+			</section>
+		</section><!-- finish the upcoming events-->
 		<div class="row">
 			<section class="col-1-2">
 				<form>
-					<label></label>
-					<input>
-					<p></p>
-					<label></label>
-					<input>
-					<label></label>
-					<input>
-					<label></label>
-					<input>
-					<label></label>
-					<input>
-					<label></label>
-					<input>
-					<label></label>
-					<input>
-					<label></label>
-					<input>
-					<label></label>
-					<input>
+					<label for="first-name">First Name</label>
+					<input id="first-name" type="first-name" name="first-name">
+					<p>Check all services That you are interested in</p>
+					<label for="ebill">eBill and ePay</label>
+					<input id="ebill" type="checkbox" name="ebill">
+					<label for="Payment">Payment Plans</label>
+					<input id="payment" type="checkbox" name="payment">
+					<label for="refunds">Student Refunds</label>
+					<input id="refunds" type="checkbox" name="refunds">
+					<label for="cashering">Cashering</label>
+					<input id="cashering" type="checkbox" name="refunds">
+					<label for="hosted">Hosted Payments</label>
+					<input id="hosted" type="checkbox" name="hosted">
+					<label for="sponsored">Sponsored Payments</label>
+					<input id="sponsored" type="checkbox" name="sponsored" value="sponsored">
+					<label for="estore">eStore</label>
+					<input id="estore" type="checkbox" name="estore" value="estore">
+					<label for="refund">Refunds</label>
+					<input id="refund" type="checkbox" name="refund" value="refund">
 				</form>
 			</section>
 			<section class="col-1-2 push-right">
 				<form>
-					<label></label>
+					<label>Last Name</label>
 					<input>
-					<label></label>
+					<label>Email</label>
 					<input>
-					<p></p>
+					<p>Message</p>
 					<textarea></textarea>
 				</form>
-				<p><a></a></p>
+				<p><a>Submit</a></p>
 			</section>
 		</div>
 		<section class="col-1-3">
